(Mainly) added English introduction

--- a/trunk/features/zeugs.html
+++ b/trunk/features/zeugs.html
@@ -66,12 +66,17 @@
 <h2>Screenshots</h2>
 
 <h3>Zeugnis-Editor</h3>
+<p>Zeugnisse werden einzeln auf einer Klasse/Fach/Schüler-Basis präsentiert. Die Lehrer-Dateien enthalten die Daten (und daher auch die Zeugnisse) nur für den Lehrer, für den sie gebaut wurden.</p>
 <img src="zgedit.jpg" alt="Zeugs editor" width="891" height="485" hspace="5" vspace="10" />
 
 <h3>Daten-Übertragung an die Hauptdatenbank</h3>
+<p>Jeder Lehrer bekommt eine Datenbank-Datei mit einem Auszug aus der Hauptdatenbank. Wenn Aktualisierungen der Schuldaten notwendig werden oder fertige Zeugnisse an die Hauptdatenbank übertragen werden müssen, wird diese Anwendung eingesetzt.
+</p>
 <img src="zgsync.jpg" alt="Synchronization application" width="548" height="242" hspace="5" vspace="10" />
 
 <h3>Drucken</h3>
+<p>Eine oder mehr Seiten von einem oder mehr kompletten Zeugnissen können ausgedruckt werden. Auch die Ausgabe in PDF-Dateien ist möglich.
+</p>
 <img src="print.jpg" alt="Printing reports" width="657" height="493" hspace="5" vspace="10" />
 
 </body>
