--- a/trunk/features/intro.html
+++ b/trunk/features/intro.html
@@ -51,6 +51,6 @@
 </p>
 <img src="cfged_en.jpg" alt="Configuration editor" width="778" height="506" hspace="5" vspace="10" />
 
-<a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=8948" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a>
+<p><em>Project hosted by</em> <a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=8948" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a> - many thanks!</p>
 </body>
 </html>
