--- a/trunk/features/zeugs.html
+++ b/trunk/features/zeugs.html
@@ -79,6 +79,6 @@
 </p>
 <img src="print.jpg" alt="Printing reports" width="657" height="493" hspace="5" vspace="10" />
 
-<a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=8948" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a>
+<p><em>Project hosted by</em> <a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=8948" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a> - vielen Dank!</p>
 </body>
 </html>
