--- a/trunk/features/zeugs.html
+++ b/trunk/features/zeugs.html
@@ -14,15 +14,15 @@
 
 <h2>Sommer-Stress - Zeugniszeit</h2>
 
-<p>Draußen ist das Wetter schön, drinnen sitzen die Lehrer, mit der Gestaltung der liebevoll handgeschriebenen Zeugnisse beschäftigt - Zeugnisse an denen sie oft schon lang genug gebastelt haben, bevor es zu dieser 'Schönschrift'-Phase kommt.
+<p>Draußen ist das Wetter schön, drinnen sitzen die Lehrer, mit der liebevollen Gestaltung handgeschriebener Zeugnisse beschäftigt - Zeugnisse an denen sie oft schon lang genug gebastelt haben, bevor es zu dieser 'Schönschrift'-Phase kommt.
 </p>
-<p>Der Anspruch auf Fehlerfreiheit führt auch gelegentlich dazu, dass das eine oder andere Zeugnis komplett neu geschrieben werden muss. Und drei Lehrer sind gerade auf Klassenfahrt, knapp vor Zeugnisausgabe ...
+<p>Der Anspruch auf Fehlerfreiheit führt auch nicht selten dazu, dass das eine oder andere Zeugnis komplett neu geschrieben werden muss. Und dann sind auch noch mehrere Lehrer gerade auf Klassenfahrt, knapp vor Zeugnisausgabe ...
 </p>
 <p>Und der Unterricht geht natürlich weiter, auch die Vorbereitung, Nachbereitung, Elternarbeit, Konferenzen, usw. Was eigentlich eine wunderbare, expansive Jahreszeit sein sollte, wird von manchem Waldorflehrer eher als stressige Qual empfunden.
 </p>
-<p>Es geht hier nicht darum, die Vorteile der (oft wirklich schönen) handgeschriebenen Zeugnisse abzustreiten. Aber angesichts zunehmender Anforderungen an die Lehrer, z.B. höhere Stundenzahlen, knappere Budgets, verhaltensauffällige Schüler, entscheiden sich manche Kollegien für die Entlastung in diesem Bereich, die von dem Gebrauch der EDV versprochen wird. Und obwohl das persönliche Element der handgeschriebenen Zeugnisse nicht durch gedruckte ersetzt werden kann, ist es ab und zu der Fall, dass die Verbesserung der Lesbarkeit von Schülern und Eltern begrüßt wird.
+<p>Es geht hier nicht darum, die Vorteile der (oft wirklich schönen) handgeschriebenen Zeugnisse abzustreiten. Aber angesichts zunehmender Anforderungen an die Lehrer, z.B. höhere Stundenzahlen, knappere Budgets, verhaltensauffällige Schüler, entscheiden sich manche Kollegien für eine Entlastung in diesem Bereich, die der Gebrauch der EDV verspricht. Und obwohl das persönliche Element der handgeschriebenen Zeugnisse nicht durch gedruckte ersetzt werden kann, ist es ab und zu der Fall, dass die Verbesserung der Lesbarkeit von Schülern und Eltern begrüßt wird.
 </p>
-<p>Für Schulen, die auf dem Weg sind, diese Entscheidung zu treffen, wie auch für Kollegien, die schon EDV für das Zeugnis-Schreiben einsetzen aber aus irgendeinem Grund mit ihrer momentanen Lösung unzufrieden sind, biete ich ein Software-Paket an, das zielgerichtet auf diese Anwendung - die Erstellung Waldorf-Zeugnisse - entwickelt wurde.
+<p>Für Schulen, die auf dem Weg sind, diese Entscheidung zu treffen, wie auch für Kollegien, die schon EDV für das Zeugnis-Schreiben einsetzen aber aus irgendeinem Grund mit ihrer momentanen Lösung unzufrieden sind, biete ich ein Software-Paket an, das zielgerichtet auf diese Anwendung - die Erstellung von Waldorf-Zeugnissen - entwickelt wurde.
 </p>
 
 <h2>Wie funktioniert das?</h2>
@@ -33,9 +33,9 @@
 </p>
 <p>Wenn alle Lehrer ihre Zeugnisse abgegeben haben, können die Komplett-Zeugnisse ausgedruckt werden.
 </p>
-<p>Änderungen im Datenbestand (z.B. Fachänderungen oder neue Schüler) müssen zuerst in die Hauptdatenbank eingegeben werden, und dann müssen alle Lehrer-Dateien damit synchronisiert werden (was für die Lehrer praktisch genau die selbe Operation wie die Endabgabe ihrer Zeugnisse ist).
+<p>Änderungen im Datenbestand (z.B. Fachänderungen oder neue Schüler) werden zuerst in die Hauptdatenbank eingegeben, und dann mit allen Lehrer-Dateien synchronisiert (was für die Lehrer praktisch genau die selbe Operation wie die Endabgabe ihrer Zeugnisse ist).
 </p>
-<p>Damit alles reibungslos funktioniert, gibt es natürlich einige Verwaltungsaufgaben, z.B. die Eingabe und Aktualisierung der Schüler- und Fach-Daten, oder die Erstellung einer neuen Datenbank am Anfang eines Schuljahres. Für diese Aufgaben gibt es Hilfsanwendungen, aber die Verwaltung wird trotzdem jemandem mit einem Grundsatz an Computerkenntnissen überlassen werden müssen und könnte unter Umständen einen beträchtlichen Zeitaufwand erfordern.
+<p>Damit alles reibungslos funktioniert, gibt es natürlich einige Verwaltungsaufgaben, z.B. die Eingabe und Aktualisierung der Schüler- und Fach-Daten, oder die Erstellung einer neuen Datenbank am Anfang eines Schuljahres. Für diese Aufgaben gibt es Hilfsanwendungen, aber die Verwaltung sollte trotzdem jemandem mit grundsätzlichen an Computerkenntnissen überlassen werden und man sollte sich genügend Zeit dafür einplanen.
 </p>
 
 <h2>Was kostet es?</h2>
@@ -44,19 +44,19 @@
 </p>
 <p>Zuerst und am Einfachsten zu überschauen: die Hardware. Die Software benötigt nicht besonders leistungsfähige Computer (ab ca. 1GHz, 256MB RAM), aber eine wichtige Komponente ist bestimmt der Drucker - Druck-Qualität und Zuverlässigkeit, ob Laser oder Tintenstrahl, Farbe oder Schwarz-Weiß. Etwas ungünstig wäre es, wenn der Drucker eine Woche vor Zeugnis-Ausgabe streikt ...
 </p>
-<p>Es gibt auch Kosten, die mit der Einrichtung der Software verbunden sind. Ein Hauptziel bei der Erstellung dieser Software war, dass sie für den normalen Zeugnis schreibenden Lehrer sehr leicht zu bedienen sein sollte. Ein anderes Ziel war, den Prozess des Zusammenfügens der Beiträge der verschiedenen Lehrer zum Druck fertigen Zeugnis so weit wie möglich zu automatisieren - so dass keine lästige Bastelarbeit notwendig ist. Um dies zu ermöglichen, muss dem Programm alle Einzelheiten über die Zeugnis-Gestaltung (das Layout) und alle relevanten Schuldaten (Schüler, Lehrer, Fächer und ihrer Zuordnungen untereinander) „beigebracht“ werden. Das bedeutet unter Umständen einen beträchtlichen Zeitaufwand, vor allem während des ersten Jahres, wenn jedes 'i'-Tüpfelchen des Layouts eingegeben werden muss (vermutlich wird sich die Gestaltung von Jahr zu Jahr nicht wesentlich verändern, so dass in späteren Jahren nur geringfügige Änderungen notwendig sind).
+<p>Es gibt auch Kosten, die mit der Einrichtung der Software verbunden sind. Ein Hauptziel bei der Erstellung dieser Software war, dass sie für den normalen Zeugnis schreibenden Lehrer sehr leicht zu bedienen sein sollte. Ein anderes Ziel war, den Prozess des Zusammenfügens der Beiträge der verschiedenen Lehrer zum Druck fertigen Zeugnis so weit wie möglich zu automatisieren - so dass keine lästige Bastelarbeit notwendig ist. Um dies zu ermöglichen, muss dem Programm alle Einzelheiten über die Zeugnis-Gestaltung (das Layout) und alle relevanten Schuldaten (Schüler, Lehrer, Fächer und ihrer Zuordnungen untereinander) „beigebracht“ werden. Das bedeutet unter Umständen einen beträchtlichen Zeitaufwand während des ersten Jahres, wenn jedes 'i'-Tüpfelchen des Layouts eingegeben werden muss. Vermutlich wird sich die Gestaltung dann von Jahr zu Jahr nicht wesentlich verändern, so dass in späteren Jahren nur geringfügige Änderungen notwendig sind.
 </p>
-<p>Auch der tagtägliche Umgang mit der Software braucht Angewöhnungszeit, vor allem für Lehrer die wenig Erfahrung mit dem Computer haben.
+<p>Auch der tagtägliche Umgang mit der Software braucht Gewöhnungszeit, vor allem für Lehrer, die wenig Erfahrung mit dem Computer haben.
 </p>
-<p>Man sollte sich auch hinsichtlich der versteckten Kosten schlau machen. Computersysteme sind technologische Wunder. Wenn man sich überlegt, was dahinter steckt, z.B. wie und zu welcher Genauigkeit die Teile gebaut sind, kann man eigentlich jeden Tag überrascht sein, wenn die Dinge immer noch funktionieren. Sie sind - angesichts ihrer Komplexität - erstaunlich zuverlässig. Störungen kommen aber natürlich immer wieder vor, und bevor man ein Computersystem für etwas Wichtiges, wie im Fall der Zeugnisse, einsetzt, sollte man sich auch überlegen, was man tun wird, wenn etwas (plötzlich) nicht funktioniert.
+<p>Man sollte sich auch hinsichtlich der versteckten Kosten schlau machen. Computersysteme sind technologische Wunder. Wenn man sich überlegt, was dahinter steckt, z.B. wie und auf welche Genauigkeit die Teile gebaut sind, kann man eigentlich jeden Tag überrascht sein, wenn die Dinge immer noch funktionieren. Sie sind - angesichts ihrer Komplexität - erstaunlich zuverlässig. Störungen kommen aber natürlich immer wieder vor, und bevor man ein Computersystem für etwas Wichtiges einsetzt, wie im Fall der Zeugnisse, sollte man sich auch überlegen, was man tun wird, wenn etwas (plötzlich) nicht funktioniert.
 </p>
-<p>Es ist fast vorprogrammiert, dass, wenn etwas schief geht, das genau in einem kritischen Moment passieren wird. Es wäre bestimmt sinnvoll, jemanden mit sehr guten Computerkenntnissen im Hintergrund zu haben, vielleicht einen Computer-Dienstleister. Der Informatiklehrer könnte gerade auf Klassenfahrt oder im Krankenhaus sein, ganz abgesehen von der Tatsache, dass er auch sein normales Arbeitspensum hat.
+<p>Es ist fast vorprogrammiert, dass, wenn etwas schief geht, es genau in einem kritischen Moment passieren wird. Es wäre daher sinnvoll, jemanden mit sehr guten Computerkenntnissen im Hintergrund zu haben, vielleicht einen Computer-Dienstleister. Der Informatiklehrer könnte gerade auf Klassenfahrt oder im Krankenhaus sein, ganz abgesehen von der Tatsache, dass auch er sein normales Arbeitspensum hat.
 </p>
 <p>Es gibt auch Wartungs- und Erneuerungskosten. Gerade die Computerwelt ändert sich rasant. Ein fünf Jahre altes System zählt schon als betagt. Ersatzteile sind vielleicht nicht (mehr) erhältlich und die alte Software läuft vielleicht nicht auf neueren Systemen. Die Änderungen sind schwer vorhersehbar, klar ist nur, dass sich etwas ändern wird. Das heißt konkret, die Software braucht auch Wartung, was in der Regel nur durch hoch qualifizierte Personen durchgeführt werden kann. Es kann auch sein, dass man nach einigen Jahren ein ganz neues System einführen will oder muss.
 </p>
 
 <h2>Technische Details</h2>
-<p>Die angebotene Software ist in der Programmiersprache 'Python' geschrieben und benutzt einige freien Software-Bauteile: 'PostgreSQL' und 'sqlite' (Datenbanken) für die Speicherung der Daten, 'Qt4' (graphische Bibliothek) für die Erstellung der Benutzer-Schnittstelle und die Druckausgabe und 'Enchant'/'hunspell' für die Rechtschreibprüfung, zusammen mit den Python-Schnittstellen für diese Bibliotheken.
+<p>Die angebotene Software ist in der Programmiersprache 'Python' geschrieben und benutzt einige freie Software-Bauteile: 'PostgreSQL' und 'sqlite' (Datenbanken) für die Speicherung der Daten, 'Qt4' (graphische Bibliothek) für die Erstellung der Benutzer-Schnittstelle und die Druckausgabe und 'Enchant'/'hunspell' für die Rechtschreibprüfung, zusammen mit den Python-Schnittstellen für diese Bibliotheken.
 </p>
 <p>'Python' ist eine (relativ) leicht zugängliche Programmiersprache mit (in Computerkreisen!) einem hohen Bekanntheitsgrad. Besonders einfach und schnell ist es, kleine Programmänderungen zu machen und sofort zu testen - da Python 'interpretiert' wird, ist keine Kompilationsphase notwendig.
 </p>
