--- a/trunk/features/zeugs.html
+++ b/trunk/features/zeugs.html
@@ -9,7 +9,15 @@
 </head>
 <body>
 
-<div align="right"><img src="freieSoftware.png" alt="free software logo" width="182" height="64" /></div>
+<div align="left"><a href="intro.html" title="English introduction">
+<img src="images/UK_Flag.png" alt="Union flag" width="50" height="25" hspace="5" vspace="10" />English Overview</a>
+<br />
+<a href="contact.html">Kontakt</a>
+</div>
+
+<div align="right"><img src="images/freieSoftware.png" alt="free software logo" width="182" height="64" /></div>
+
+
 <h1>'Zeugs' - Waldorfzeugnisse mit EDV</h1>
 
 <h2>Sommer-Stress - Zeugniszeit</h2>
@@ -63,21 +71,29 @@
 <p>Das Software-System besteht aus mehreren eigentlich separaten Anwendungen, die aber auf einander zugeschnitten sind und auch Code-Module teilen. Die Module dienen dazu, die verschiedenen logischen Funktionen des Systems etwas auseinander zu halten. Der Code enthält Kommentare, um die Zwecke der verschiedenen Programmteile und Anweisungen zu verdeutlichen, aber Verbesserungen wären immer möglich. Letztendlich geht es hier um ein Software-System, das aus tausenden Code-Zeilen besteht, und sich da einzuarbeiten und die Funktionsweise zu verstehen ist etwas, das Zeit, Wissen und Erfahrung bedarf. Da die Software, einschließlich aller benutzten Bibliotheken, 'frei' ist, ist wenigstens diese Möglichkeit prinzipiell gegeben, was mit unfreier, proprietärer Software meistens nicht der Fall ist.
 </p>
 
+<h2>Herunterladen</h2>
+<p>Die neuesten Dateien können auf der BerliOS <a href="http://developer.berlios.de/projects/zeugs/">'project page'</a> gefunden werden - unter 'Latest File Releases'.</p>
+
+<p>Die Bedienungsanleitung ist als <a href="Anleitung.odt">OpenOffice-Datei</a> und als <a href="Anleitung.pdf">PDF-Datei</a> erhältlich.
+</p>
+
 <h2>Screenshots</h2>
 
 <h3>Zeugnis-Editor</h3>
 <p>Zeugnisse werden einzeln auf einer Klasse/Fach/Schüler-Basis präsentiert. Die Lehrer-Dateien enthalten die Daten (und daher auch die Zeugnisse) nur für den Lehrer, für den sie gebaut wurden.</p>
-<img src="zgedit.jpg" alt="Zeugs editor" width="891" height="485" hspace="5" vspace="10" />
+<img src="images/zgedit.jpg" alt="Zeugs editor" width="891" height="485" hspace="5" vspace="10" />
 
 <h3>Daten-Übertragung an die Hauptdatenbank</h3>
 <p>Jeder Lehrer bekommt eine Datenbank-Datei mit einem Auszug aus der Hauptdatenbank. Wenn Aktualisierungen der Schuldaten notwendig werden oder fertige Zeugnisse an die Hauptdatenbank übertragen werden müssen, wird diese Anwendung eingesetzt.
 </p>
-<img src="zgsync.jpg" alt="Synchronization application" width="548" height="242" hspace="5" vspace="10" />
+<img src="images/zgsync.jpg" alt="Synchronization application" width="548" height="242" hspace="5" vspace="10" />
 
 <h3>Drucken</h3>
 <p>Eine oder mehr Seiten von einem oder mehr kompletten Zeugnissen können ausgedruckt werden. Auch die Ausgabe in PDF-Dateien ist möglich.
 </p>
-<img src="print.jpg" alt="Printing reports" width="657" height="493" hspace="5" vspace="10" />
+<img src="images/print.jpg" alt="Printing reports" width="657" height="493" hspace="5" vspace="10" />
+
+
 
 <p><em>Project hosted by</em> <a href="http://developer.berlios.de" title="BerliOS Developer"> <img src="http://developer.berlios.de/bslogo.php?group_id=8948" width="124px" height="32px" border="0" alt="BerliOS Developer Logo"></a> - vielen Dank!</p>
 </body>
